nohup.out
  File "volume-download.py", line 23
    db_uri = f'mongodb://ben:{password}@35.242.129.237:27017/?authSource=admin&ssl=false'
                                                                                        ^
SyntaxError: invalid syntax
